<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/firstGenFragment">

    <!-- Tabs Pokedex-->
    <fragment
        android:id="@+id/firstGenFragment"
        android:name="com.chris.pokedex.ui.fragment.home.HomePokemonFragment"
        android:label="@string/tab_first_generation"
        tools:layout="@layout/home_pokemon_fragment">
        <action
            android:id="@+id/action_firstGenFragment_to_detailPokemonFragment"
            app:destination="@id/detailPokemonFragment" />
    </fragment>

    <fragment
        android:id="@+id/secondGenFragment"
        android:name="com.chris.pokedex.ui.fragment.home.HomePokemonFragment"
        android:label="@string/tab_second_generation"
        tools:layout="@layout/home_pokemon_fragment">
        <action
            android:id="@+id/action_secondGenFragment_to_detailPokemonFragment"
            app:destination="@id/detailPokemonFragment" />
    </fragment>

    <fragment
        android:id="@+id/thirdGenFragment"
        android:name="com.chris.pokedex.ui.fragment.home.HomePokemonFragment"
        android:label="@string/tab_third_generation"
        tools:layout="@layout/home_pokemon_fragment">
        <action
            android:id="@+id/action_thirdGenFragment_to_detailPokemonFragment"
            app:destination="@id/detailPokemonFragment" />
    </fragment>

    <fragment
        android:id="@+id/fourthGenFragment"
        android:name="com.chris.pokedex.ui.fragment.home.HomePokemonFragment"
        android:label="@string/tab_fourth_generation"
        tools:layout="@layout/home_pokemon_fragment">
        <action
            android:id="@+id/action_fourthGenFragment_to_detailPokemonFragment"
            app:destination="@id/detailPokemonFragment" />
    </fragment>

    <!-- Secondary-->

    <fragment
        android:id="@+id/travelPokemonFragment"
        android:name="com.chris.pokedex.ui.fragment.travel.TravelPokemonFragment"
        tools:layout="@layout/layout_travel_pokemon" />

    <fragment
        android:id="@+id/catchPokemonFragment"
        android:name="com.chris.pokedex.ui.fragment.catched.CatchPokemonFragment"
        tools:layout="@layout/catch_pokemon_fragment">
        <action
            android:id="@+id/action_catchPokemonFragment_to_detailPokemonFragment"
            app:destination="@id/detailPokemonFragment" />
    </fragment>

    <fragment
        android:id="@+id/detailPokemonFragment"
        android:name="com.chris.pokedex.ui.fragment.detail.DetailPokemonFragment"
        tools:layout="@layout/detail_pokemon_fragment" />

</navigation>